# grimoire

./: .cursorrules  init.sh  readme.md
boxes/: readme.md
boxes/__template/: 0.00.md
boxes/busqueda/: .envrc  2024-09-17-busqueda.md
dotfiles/: init.sh  readme.md
dotfiles/src/bootstrap/: install_programs.sh
dotfiles/src/rc/: aliases.sh  path.sh  prompt.sh  sink.sh  vimrc
dotfiles/src/settings/: caps_lock_to_escape.sh  customize_vscode.sh  install_tmux.sh  natrual_scroll.sh  tex_shinobi_keyboard.sh  tmux.conf  truly_ergonomic_remap.sh
grim_cli/: .cursorrules  .gitignore  Cargo.toml  Makefile
grim_cli/src/: constants.rs  lib.rs  main.rs
grim_cli/src/commands/: gg.rs  mod.rs  new.rs
guides/: shortcuts.txt  useful_commands.txt
