[package]
name = "grim_cli"
version = "0.1.0"
edition = "2021"
description = "A well-structured CLI app for managing and organizing boxes of information"

[dependencies]
clap = { version = "4.5.17", features = ["derive"] }
chrono = "0.4"
anyhow = "1.0"
regex = "1.5"

[[bin]]
name = "grim"
path = "src/main.rs"
